[package]
name = "rust-arduino-nano-33-blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
nrf52840-hal = { version = "0.18.0", features = ["rt"] }
nb = "1.1.0"
embedded-hal = "1.0.0"